added asteroid game :) broke front page :(

--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
         <a href="/2Seconds"><div class="entry">
             <span><h1>2 Sec</h1></span>
         </div></a>
-        <a href="/static/noted"><div class="entry">
+        <a href="/noted"><div class="entry">
             <span><h1>Noted</h1></span>
         </div></a>
     </nav>
