fixing for heroku

--- a/views/index.html
+++ b/views/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link href="/styling.css" rel="stylesheet" type="text/css"/>
-    <link href="global/globalStyling.css" rel="stylesheet" type="text/css"/>
+    <link href="/pages/index/styling.css" rel="stylesheet" type="text/css"/>
+    <link href="/global/globalStyling.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/Javascript/indexJS.js"></script>
+    <script src="/pages/index/Javascript/indexJS.js"></script>
     <script src="/projects/clock/clock.js"></script>
 </head>
 <body>
@@ -19,7 +19,7 @@
         </div>
         <a href="https://github.com/deji20"><div class="entry">
             <h2>Github</h2>
-            <img src="/images/Professional/github.png"/>
+            <img src="pages/index/images/Professional/github.png"/>
         </div></a>
     </nav>
 
@@ -37,15 +37,15 @@
         <h1 class="groupName">Contact Info</h1>
         <a href="https://www.facebook.com/deji.ehinlanwo/"><div class="entry">
             <h2>Facebook</h2>
-            <img class="pic" src="/images/Contact/Facebook.png"/>
+            <img class="pic" src="/pages/index/images/Contact/Facebook.png"/>
         </div></a>
         <a href="https://www.instagram.com/dejifraliss/"><div class="entry">
             <h2>Instagram</h2>
-            <img src="/images/Contact/Instagram.png"/>
+            <img src="/pages/index/images/Contact/Instagram.png"/>
         </div></a>
         <a href="https://www.linkedin.com/in/dejiehinlanwo/"><div class="entry">
             <h2>LinkedIn</h2>
-            <img src="/images/Contact/linkedIn.png"/>
+            <img src="/pages/index/images/Contact/linkedIn.png"/>
         </div></a>
     </nav>
 
@@ -54,7 +54,7 @@
         <div class="navMark"></div>
         <div class="navMark"></div>
     </div>
-    <div class="navigation" id="up" onclick="change(-1)"><img src="global/images/Assets/arrow.png"/></div>
-    <div class="navigation" id="down" onclick="change(1)"><img src="global/images/Assets/arrow.png"/></div>
+    <div class="navigation" id="up" onclick="change(-1)"><img src="/global/images/Assets/arrow.png"/></div>
+    <div class="navigation" id="down" onclick="change(1)"><img src="/global/images/Assets/arrow.png"/></div>
 </body>
 </html>
