just revamped a whole bunch of stuff

--- a/projects/noted/public/styling/sections.css
+++ b/projects/noted/public/styling/sections.css
@@ -8,3 +8,10 @@
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
   }
+
+.subsection{
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1s ease-out;
+}
