--- a/views/asteroids.html
+++ b/views/asteroids.html
@@ -3,4 +3,9 @@
 <script src="arena.js"></script>
 <script src="gameloop.js"></script>
 
-<h1 id="scoreboard" style="position: fixed; top:1em; right:50%; color:white; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;"></h1>
+<div class="text-center fixed top-16 text-white w-full">
+    <h1 id="scoreboard"></h1>
+</div>
+<div id="game" class="h-full w-full">
+
+</div>
