--- a/views/error.html
+++ b/views/error.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Error</title>
-    <link href="/global/globalStyling.css" rel="stylesheet" type="text/css"/>
-    <link href="/error/styling.css" rel="stylesheet" type="text/css"/>
-</head>
-<body class="center">
-    <div class="background"></div>
-    <div id="errorBox">
-        <h2>SORRY</h2>
-        <p>This is my personal website. so it's mostly for playing around with, and testing new projects.
-            Might be it bugged out while i was trying something new :(</p>
+<div class="background"></div>
+<div class="flex justify-center">
+    <div id="errorBox" class="w-1/2 flex flex-col place-self-center items-center text-white">
+        <h2 class="text-3xl mb-3">SORRY</h2>
+        <p class="text-sm">
+            This is my personal website. so it's mostly for playing around with, and testing new projects.
+            Might be it bugged out while i was trying something new :(
+        </p>
     </div>
-</body>
-</html>
+</div>
