--- a/public/global/globalStyling.css
+++ b/public/global/globalStyling.css
@@ -1,18 +1,3 @@
-@font-face {
-    font-family: 'Adam';
-    src: url("/global/fonts/ADAM.otf");
-}
-
-body, html{
-    margin:0;
-    padding:0;
-    height:100%;
-    width:100%;
-    font-family: "Adam";
-    letter-spacing: 2px;
-    overflow: hidden;
-}
-
 .background{
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/global/images/background.png");
     height: 100%;
@@ -21,7 +6,7 @@ body, html{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: absolute;
+    position: fixed;
 }
 
 .center{
