added skills page

--- a/public/clientLibraries/tailwindSettings.css
+++ b/public/clientLibraries/tailwindSettings.css
@@ -2,4 +2,15 @@
 
 @tailwind components;
 
-@tailwind utilities
+@tailwind utilities;
+
+@layer utilities{
+    .text-2xs{
+        font-size:0.625rem;
+        line-height 0.75rem;
+    }
+    .text-3xs{
+        font-size:0.5rem;
+        line-height 0.5rem;
+    }
+}
