--- a/templates/standard/footer.html
+++ b/templates/standard/footer.html
@@ -1,4 +1,14 @@
-</div>
-<footer class="flex w-full h-10 bg-black min-top"></footer>
-</body>
+            </div>
+        <script src="/global/javascript/footer.js"></script>
+        <footer class="flex flex-col  rounded-t-full w-full justify-center h-12 bg-black bg-opacity-40 min-top text-center">
+            <div class="h-3/5">
+                <a><img class="inline mx-5 h-full" src="/global/images/socialmedia/github.png"/></a>
+                <a><img class="inline mx-5 h-full" src="/global/images/socialmedia/Facebook.png"/></a>
+                <a><img class="inline mx-5 h-full" src="/global/images/socialmedia/linkedIn.png"/></a>
+                <a><img class="inline mx-5 h-full" src="/global/images/socialmedia/Instagram.png"/></a>
+                
+            </div>
+            <p class="text-sm">Copyright &#169; <span id="copyrightDate"></span></p>
+        </footer>
+    </body>
 </html>
