--- a/templates/standard/header.html
+++ b/templates/standard/header.html
@@ -11,17 +11,19 @@
     <title>Deji's Site</title>
 </head>
 <body class="m-0 p-0">
-    <nav class="z-10 fixed flex w-full h-10 items-center justify-evenly text-white border-black bg-gray-800">
+    <nav class="z-10 fixed flex w-full h-10 items-center justify-evenly text-gray-400 border-black bg-pink-800">
         <div class="h-full">
-            <a href="/" class="h-full flex flex-row items-center">
+            <a href="/" class="h-full flex flex-row items-center text-gray">
                 <img class="h-full" src="/global/images/assets/home.png"/>
-                <span> HOME</span>
+                <span class="transition-colors duration-300 hover:text-white"> HOME</span>
             </a>
         </div>
-        <div class="flex w-full justify-evenly text-gray-300">
-            <a href="/projects" class="hover:text-white"><span>Projects</span></a>
-            <a href="/skills" class="hover:text-white"><span>Skills</span></a>
-            <a href="/contacts" class="hover:text-white"><span>Contacts</span></a>
+        <div class="flex w-full justify-evenly text-xs">
+            <a href="/projects" class="transition-colors duration-300 hover:text-white"><span>Projects</span></a>
+            <a href="/skills" class="transition-colors duration-300 hover:text-white"><span>Skills</span></a>
+            <a href="/recommendations" class="transition-colors duration-300 hover:text-white"><span>Recommendations</span></a>
+            <a href="/education" class="transition-colors duration-300 hover:text-white"><span>Education</span></a>
+            <a href="/contact" class="transition-colors duration-300 hover:text-white"><span>Contact</span></a>
         </div>
     </nav>
     <div class="min-h-screen flex pt-10">
