had to pretty much restart the github because of an error in the commits

--- a/public/clientLibraries/tailwindSettings.css
+++ b/public/clientLibraries/tailwindSettings.css
@@ -4,7 +4,7 @@
 
 @tailwind utilities;
 
-@layer utilities{
+/*@layer utilities{
     .text-2xs{
         font-size:0.625rem;
         line-height 0.75rem;
@@ -13,4 +13,4 @@
         font-size:0.5rem;
         line-height 0.5rem;
     }
-}
+}*/
