--- a/views/education.html
+++ b/views/education.html
@@ -1,1 +1,17 @@
 <div class="background"></div>
+<div class="flex w-full p-10 justify-center items-center">
+    <div class="flex flex-col w-full text-center">
+        <h1 class="text-2xl py-3 bg-opacity-75 bg-red-700 rounded-t-lg">Kea</h1>
+        <div class="flex flex-row  bg-opacity-50 bg-black items-center">
+            <div class="p-10 flex max-w-2xl bg-opacity-50 bg-gray-600">
+                <img class="object-contain" src="/pages/education/images/kea.png"/>
+            </div>
+            <p class="text-sm p-3">
+                With a focus on programming, systems development, businesses and technology. At this education i have learned how to program, analyse and thus how to develop and maintain IT systems. In addition, I have learned how IT interacts with organisations and gained insight into the technology that makes it all possible. with a great focus on teaching how to design and develop applications in collaboration with others. Where software is all about people.
+            </p>
+        </div>
+        <h1  class="bg-opacity-75 bg-red-700 rounded-b-lg">
+            2019 - Present
+        </h1>
+    </div>
+</div>
