--- a/views/projects.html
+++ b/views/projects.html
@@ -2,7 +2,7 @@
 <div id="projects" class="w-full flex justify-evenly items-center">
     <a href="/projects/noted">
         <div id="noted" class="text-center w-96 rounded-xl bg-blue-700 bg-opacity-20 text-white shadow-xl">
-            <div class="w-full py-3">
+            <div class="w-full py-3 bg-red-800 bg-opacity-50 rounded-t-xl">
                 <h1 class="text-xl">Noted</h1>
             </div>
             <div class="m-2">
@@ -16,8 +16,8 @@
         </div>
     </a>
     <a href="/projects/asteroids">
-        <div id="asteroids" class="text-center w-96 rounded-xl bg-blue-700 bg-opacity-20 text-white shadow-xl">
-            <div class="w-full py-3">
+        <div id="asteroids" class="text-center w-96 rounded-t-xl bg-blue-700 bg-opacity-20 text-white shadow-xl">
+            <div class="w-full py-3 bg-red-800 bg-opacity-50 rounded-xl">
                 <h1 class="text-xl">Asteroids</h1>
             </div>
             <div class="m-2">
