--- a/templates/standard/footer.html
+++ b/templates/standard/footer.html
@@ -1,6 +1,6 @@
             </div>
         <script src="/global/javascript/footer.js"></script>
-        <footer class="flex flex-col  rounded-t-full w-full justify-center h-12 bg-black bg-opacity-40 min-top text-center">
+        <footer class="flex flex-col w-full justify-center h-12 bg-black bg-opacity-40 min-top text-center">
             <div class="h-3/5">
                 <a><img class="inline mx-5 h-full" src="/global/images/socialmedia/github.png"/></a>
                 <a><img class="inline mx-5 h-full" src="/global/images/socialmedia/Facebook.png"/></a>
