--- a/views/skills.html
+++ b/views/skills.html
@@ -27,7 +27,7 @@
                     <img class="absolute h-1/3 top-1/3 left-1/3" src="/pages/skills/images/cpp.png"/>
                 </div>
                 <p class="text-xs text-left p-5">
-                    My primary programming language while studying at KEA. With experience creating web and desktop applications, as well as full-stack development with spring and thymeleaf 
+                    The first language i learned. I have used c++ for many hobby projects including back-end web development, windows applications¸ Arduino and Raspberry Pi applications      
                 </p>
             </div>
             <h1 class="bg-red-800 bg-opacity-75 rounded-b-md">Experience: 4 Years</h1>
@@ -41,7 +41,7 @@
                     <img class=" absolute h-1/3 top-1/3 left-1/3" src="/pages/skills/images/python.png"/>
                 </div>
                 <p class="text-xs text-left p-5">
-                    My primary programming language while studying at KEA. With experience creating web and desktop applications, as well as full-stack development with spring and thymeleaf 
+                    My Python development experience include, web scrappers, WebSocket applications and personal scripts  
                 </p>
             </div>
             <h1 class="bg-red-800 bg-opacity-75 rounded-b-md">Experience: 1 Years</h1>
@@ -57,7 +57,7 @@
                 <img class="absolute h-1/3 top-1/3 left-1/3" src="/pages/skills/images/js.png"/>
             </div>
             <p class="text-xs text-left p-5">
-                My primary programming language while studying at KEA. With experience creating web and desktop applications, as well as full-stack development with spring and thymeleaf 
+                The language used to build this website. Experience developing full-stack applications with node.js, as well as professional experience creating front-end web pages
             </p>
         </div>
         <h1 class="bg-red-800 bg-opacity-75 rounded-b-md">Experience: 2 Years</h1>
