working on toosec videos

--- a/views/skills.html
+++ b/views/skills.html
@@ -62,4 +62,12 @@
         </div>
         <h1 class="bg-red-800 bg-opacity-75 rounded-b-md">Experience: 2 Years</h1>
     </div>
+
+    <div class="w-full">
+        <div class="h-10">
+            <img src=""/>
+            <p>React</p>
+        </div>
+
+    </div>
 </div>
