--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
 	<div class="background"></div>
     
 <div class="flex w-full flex-col justify-center items-center">
-    <div id="heroHeader" class="flex my-16 px-40 w-full h-full justify-center items-center">
+    <div id="heroHeader" class="flex my-16 px-40 w-full justify-center items-center">
         <div class="flex flex-row">
             <div class="flex flex-col mx-6">
                 <h1 class="text-4xl">Deji Ehinlanwo</h1>
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <div class="flex flex-col justify-center items-center w-full my-16 h-48 text-center">
+    <div class="flex flex-1 flex-col justify-center items-center w-full my-16 text-center">
         <div class="w-2/3 rounded-t-md bg-red-800 bg-opacity-50">
             <a id="sectionName" class="text-xl">Projects</a>
         </div>
@@ -35,22 +35,22 @@
                 </div>
             </nav>
             <nav class="m-auto bg-black bg-opacity-30 rounded-b-lg flex flex-col items-center justify-center mainGroup h-full transition-all duration-1000" id="Professional">
-                <div class="flex flex-row w-full justify-evenly">
-                    <div class="flex flex-col">
-                        <div class="relative skill w-24 h-24">
+                <div class="flex flex-row items-center w-full h-full justify-evenly">
+                    <div class="flex flex-1 h-full flex-col items-center">
+                        <div class="relative flex w-full items-center skill">
                             <input class="proficiency" type="hidden" value="92">
                             <canvas class="canvas"></canvas>
                             <img class="absolute h-1/3 top-1/3 left-1/3" src="/pages/skills/images/java.png"/>
                         </div>
                         <p>java</p>
                     </div>
-                    <div class="flex flex-col">                        
-                        <div class="relative skill w-24 h-24">
+                    <div id="canResize" class="flex flex-1 h-full flex-col items-center">                        
+                        <div class="relative flex items-center skill">
                             <input class="proficiency" type="hidden" value="89">
                             <canvas class="canvas"></canvas>
                             <img class="absolute h-1/3 top-1/3 left-1/3" src="/pages/skills/images/js.png"/>
-                            <p>javascript</p>
                         </div>
+                        <p>javascript</p>
                     </div>
                 </div>
                 <a href="/skills">See More!</a>
